<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >


        <item
            android:id="@+id/menu_favorit"
            android:title="@string/favorite"
            android:icon="@drawable/ic_baseline_favorite_24"
            app:showAsAction="always"
            />

        <item
            android:id="@+id/menu_notif"
            android:title="@string/notification_settings"
            android:icon="@drawable/ic_baseline_notifications_24"
            app:showAsAction="withText"
            />

        <item
            android:id="@+id/menu_bahasa"
            android:title="@string/change_language"
            android:icon="@drawable/ic_baseline_settings_24"
             />

</menu>