<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/kotak_desk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/detail_background"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp"
            app:layout_scrollFlags="scroll|snap">

            <ImageView
                android:id="@+id/detail_profile_backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/cth3"
                app:layout_collapseMode="parallax"
                android:contentDescription="@string/background" />
            <!--  sama  -->

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <android.widget.Toolbar
            android:id="@+id/detail_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:theme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            style="@style/ToolBarWithNavigationBack"
           />
        <!--  sama  -->

        <LinearLayout
            android:id="@+id/container_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="8dp"
            android:gravity="center"
            app:layout_scrollFlags="scroll|enterAlways|snap">
            <!--  sama  di padding top-->

            <TextView
                android:id="@+id/txt_detail_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:text="@string/username" />
            <!--  sama  -->

            <TextView
                android:id="@+id/txt_detail_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
                android:text="@string/name"
                android:textColor="@android:color/white" />
            <!--  sama  -->

            <ProgressBar
                android:id="@+id/detail_progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />
            <!--  sama  -->

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:gravity="center"
            app:layout_scrollFlags="scroll|enterAlways|snap">
            <!--  sama  -->

            <TextView
                android:id="@+id/txt_detail_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_supervisor_account_24"
                android:text="@string/company" />
            <!--  sama  -->

            <TextView
                android:id="@+id/txt_detail_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:drawableStart="@drawable/ic_baseline_location_on_24"
                android:text="@string/location" />
            <!--  sama  -->

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingTop="8dp"
            app:layout_scrollFlags="scroll|enterAlways|snap">
            <!--  sama  -->

            <TextView
                android:id="@+id/txt_detail_blog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:drawableStart="@drawable/ic_baseline_insert_link_24"
                android:text="@string/blog" />
            <!--  sama  -->

            <TextView
                android:id="@+id/tvRepository"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/repository"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.03"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_detail_blog"
                />

        </LinearLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/detail_tabs"
            android:layout_width="fill_parent"
            android:layout_height="?attr/actionBarSize"
            app:tabSelectedTextColor="?android:attr/textColorPrimaryInverse"
            app:tabIndicatorColor="?android:attr/textColorPrimaryInverse"
            app:tabIndicatorHeight="4dp" />
        <!--  sama  -->

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/detail_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >
    </androidx.viewpager.widget.ViewPager>
    <!--  sama  -->

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/foto_user"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        app:layout_anchor="@id/container_title"
        android:elevation="8dp"
        app:layout_scrollFlags="scroll"
        app:layout_anchorGravity="top|center_horizontal" />
    <!--  sama  dibagian elevation-->

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:foregroundGravity="bottom"
        app:fabSize="normal"
        app:layout_anchor="@id/detail_viewpager"
        app:layout_anchorGravity="bottom|end"
        android:backgroundTint="@color/red"
        android:tint="@color/white"
        app:srcCompat="@drawable/ic_baseline_favorite_24"/>
    <!--  sama layout-margin dan backgroundtint -->

</androidx.coordinatorlayout.widget.CoordinatorLayout>